Additional JDK25 and Quarkus 3.28.1 add-opens, whitelist